test/classes/ferguson/coerce-const-ref.good
coerce-const-ref.chpl:16: error: in call to 'test', cannot pass result of coercion by reference
coerce-const-ref.chpl:16: note: implicit coercion from 'unmanaged SubClass' to 'unmanaged MyClass'
coerce-const-ref.chpl:10: note: when passing to 'const ref' intent formal 'arg'
